Add accept invitation + add homeId to invitations
