# back/controllers/home/delete.controller.mjs
@@ -1,18 +1,20 @@
 import E from 'http-errors'
 
 import V from '../../validations.mjs'
-import { Home, User } from '../../models.mjs'
+import { Home, Invitation, User } from '../../models.mjs'
 
 // @todo: When tasks will exists, a home deletion will result in task deletions
 // also: maybe to delete a home, the approval of all inhabitants should be required ?
 export async function controller(req, res, next) {
   const _id = req.params.id
+  const homeId = req.user.homeId
 
-  if (req.user.homeId?.toString() !== _id)
+  if (homeId?.toString() !== _id)
     return next(new E.Forbidden())
 
   const [doc] = await Promise.all([
     Home.deleteOne({ _id }),
+    Invitation.deleteMany({ homeId }),
     User.updateMany({ homeId: _id }, { homeId: null })
   ])
 
